--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -14,9 +14,6 @@
   height: 100vh;
   width: 100vw;
 }
-// .bg-gray-1 {
-//   background-color: $--color-gray-1;
-// }
-// .bg-gray-2 {
-//   background-color: $--color-gray-2;
-// }
+.logo {
+  height: 30px;
+}
