Feat: Finalizado logica de CRUD nas tarefas

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -17,3 +17,9 @@
 .logo {
   height: 30px;
 }
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
+}
